[package]
name = "cashier-restful"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = { version = "0.15.14", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["log"] }
tower-http = { version = "0.6.6", features = ["trace", "sensitive-headers", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
